fix: banner alignment

--- a/packages/theme/src/theme/components/home-banner/index.module.scss
+++ b/packages/theme/src/theme/components/home-banner/index.module.scss
@@ -1,3 +1,8 @@
+.wrapper {
+  max-width: 72rem;
+  margin: auto;
+}
+
 .container {
   background-color: #322659;
   background-image: url('../../assets/gradient-dark.avif');
@@ -13,7 +18,6 @@
   align-items: center;
   position: relative;
   overflow: hidden;
-  max-width: 72rem;
 }
 
 .logo {
